# instaculinary-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
app/: README.md  app.py  reflex_app.py
backend/: api.py
config/: config.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
src/: README.md  build_documents.py  create_vector_db.py  embedding.py  load_data.py  main.py  matching_url.py  search.py  sentence_transformer_embedding.py  utils.py  vector_store.py
